--- a/FINAL PORTFOLIO/index.html
+++ b/FINAL PORTFOLIO/index.html
@@ -175,11 +175,11 @@
            
                  <div class="contact-info">
                    <div>
-                     <img src="https://img.icons8.com/ios-filled/50/ffffff/new-post.png" alt="email">
+                     <img src="assets/images/gmail-icon-free-png.webp" alt="email">
                      <span>: JADEDAWE68@gmail.com</span>
-                   </div>
+                        </div>
                    <div>
-                     <img src="https://img.icons8.com/ios-filled/50/ffffff/user.png" alt="username">
+                     <img src="assets/images/github-circle-1.png" alt="github">
                      <span>: msjidd</span>
                    </div>
                    <div>
