--- a/FINAL PORTFOLIO/pages/thankyou.html
+++ b/FINAL PORTFOLIO/pages/thankyou.html
@@ -27,7 +27,7 @@
     <main>
         <section id="thank-you" class="thankyou">
             <h1>"Thank you so much for appreciating my service"</h1>
-            <p>"Thank you so much for appreciating my service—your support truly means a lot and motivates me to keep delivering my best."</p>
+            <p>"Your support truly means a lot and motivates me to keep delivering my best."</p>
             <a href="../index.html" class="btn">BACK TO HOME</a>
             
  </section>
