--- a/FINAL PORTFOLIO/index.html
+++ b/FINAL PORTFOLIO/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <link rel="stylesheet" href="../assets/styles/style.css">
-</header> 
+</head> 
 
 <!---HEADER-->
 
@@ -213,4 +213,5 @@
             </footer> 
 
 </body>
+
 </html>  
