--- a/FINAL PORTFOLIO/index.html
+++ b/FINAL PORTFOLIO/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="nav-menu">
             <ul>
-                <li><a href="./index.html">HOME</a></li>
+                <li><a href="#home">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#projects">PROJECT</a></li>
                 <li><a href="#contact">CONTACT</a></li>
@@ -215,3 +215,4 @@
 </body>
 
 </html>  
+
